# Strategy-Report

./: .gitignore  README.md  index.html  package.json  pyproject.toml
api/: generate-project-deck.js  generate-signature-project.js
data/sample/: sample_historical_outcomes.csv  sample_legacy_model_config.yaml  sample_project_library.yaml  sample_student_stage1.yaml  sample_student_stage2.yaml  sample_target_schools.csv
form/: index.html
guide/: index.html
platform/: index.html  school-data.js  stage-lms-v2.jsx  stage-upgrade.jsx
proposal/: eunhyu.html
reports/: full_strategy_report.md  migration_audit.md  stage1_report.md  stage2_strategy_report.md
src/boarding_strategy/: __init__.py  cli.py
src/boarding_strategy/legacy_excel/: __init__.py  anonymizer.py  formula_inventory.py  migration_manifest.py  table_extractor.py  workbook_inspector.py
src/boarding_strategy/legacy_model/: __init__.py  legacy_compatibility.py  legacy_family_connection.py  legacy_parity.py  legacy_prediction.py  legacy_rubric.py  legacy_schemas.py  legacy_school_data.py  legacy_school_strength.py  legacy_score_backend.py  (+1 more)
src/prompts/: projectProposalDeckPrompt.clean.txt  projectProposalDeckPrompt.ts  projectProposalDeckPrompt.v2.txt  projectProposalDeckPrompt.v3.txt  projectProposalDeckPrompt.v4.txt
tests/: test_legacy_compatibility.py  test_legacy_family_connection.py  test_legacy_prediction.py  test_legacy_rubric.py  test_legacy_score_backend.py  test_privacy_guardrails.py  test_report_generation.py  test_stage1_pipeline.py  test_stage2_pipeline.py  test_workbook_inspector.py
(+20 files in other folders)
