[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "boarding-strategy"
version = "0.1.0"
description = "Legacy Excel migration and two-stage boarding school strategy engine"
requires-python = ">=3.11"
dependencies = ["pydantic>=2", "openpyxl>=3", "pandas>=2", "numpy>=1"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
boarding-strategy = "boarding_strategy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
